--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Unity WebGL Player | smithy-match-three</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@vkontakte/vk-bridge@2.0.8/dist/index.umd.js"></script>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
