--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test.loader.js";
+      var loaderUrl = buildUrl + "/VK.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test.data.unityweb",
-        frameworkUrl: buildUrl + "/test.framework.js.unityweb",
-        codeUrl: buildUrl + "/test.wasm.unityweb",
+        dataUrl: buildUrl + "/VK.data.unityweb",
+        frameworkUrl: buildUrl + "/VK.framework.js.unityweb",
+        codeUrl: buildUrl + "/VK.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "smithy-match-three",
@@ -100,7 +100,7 @@
         canvas.style.height = "600px";
       }
 
-      canvas.style.background = "url('" + buildUrl + "/test.jpg') center / cover";
+      canvas.style.background = "url('" + buildUrl + "/VK.jpg') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
